--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Home/down">
                     <i><img src="/images/grids_icon_08.png"></i>
                     <p>App</p>
                 </a>
