--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
@@ -4,6 +4,7 @@
     var adList = ViewBag.AdList as List<Advertisement>;
     var PageIndex = ViewBag.PageIndex;
     string CityId = ViewBag.CityId;
+    SiteSetting site = ViewBag.SiteSetting;
 }
 
 @if (newsList != null)
@@ -405,7 +406,7 @@
                     <div class="hjc_news">
                         <div class="hjc_news_subject">@newse.FullHead</div>
                         <div class="newstime">
-                            <span>万彩吧</span>
+                            <span>@site.WebName</span>
                             <span>@newse.ReleaseTimeStr</span>
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
@@ -419,7 +420,7 @@
                     <div class="hjc_news_left">
                         <div class="hjc_news_subject">@newse.FullHead</div>
                         <div class="newstime">
-                            <span>万彩吧</span>
+                            <span>@site.WebName</span>
                             <span>@newse.ReleaseTimeStr</span>
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
@@ -449,7 +450,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="newstime">
-                            <span>万彩吧</span>
+                            <span>@site.WebName</span>
                             <span>@newse.ReleaseTimeStr</span>
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
@@ -471,7 +472,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="newstime">
-                            <span>万彩吧</span>
+                            <span>@site.WebName</span>
                             <span>@newse.ReleaseTimeStr</span>
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
@@ -484,7 +485,7 @@
                     <div class="hjc_news">
                         <div class="hjc_news_subject">@newse.FullHead</div>
                         <div class="">
-                            <span>万彩吧</span>
+                            <span>@site.WebName</span>
                             <span>@newse.ReleaseTimeStr</span>
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
