--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Newtonsoft.Json;
+@using C8.Lottery.Model
 @{
     ViewBag.Title = "Register";
+    SiteSetting site = ViewBag.SiteSetting;
 }
 <!doctype html>
 <html>
@@ -130,7 +132,7 @@
 
     <header class="hjc_header">
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo"><img src="~/images/03.png"></a>
+        <a href="javascript:;" class="hjc_logo"><img src="@(string.IsNullOrEmpty(site.LogoPath)?"/images/03.png":site.LogoPath)"></a>
         <a href="/Home/Login" class="hjc_login">登录</a>
     </header>
 
