个人主页计划添加竞猜入口

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -276,7 +276,7 @@
                             <div class="hjc_news">
                                 <div class="hjc_news_subject">@article.FullHead</div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@article.ReleaseTimeStr</span>
                                     <span>@article.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -290,7 +290,7 @@
                             <div class="hjc_news_left">
                                 <div class="hjc_news_subject">@article.FullHead</div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@article.ReleaseTimeStr</span>
                                     <span>@article.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -320,7 +320,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@article.ReleaseTimeStr</span>
                                     <span>@article.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -342,7 +342,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@article.ReleaseTimeStr</span>
                                     <span>@article.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -355,7 +355,7 @@
                             <div class="hjc_news">
                                 <div class="hjc_news_subject">@article.FullHead</div>
                                 <div class="">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@article.ReleaseTimeStr</span>
                                     <span>@article.CommentCount<i class="icon-comment"></i></span>
                                 </div>
