--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -352,7 +352,7 @@
                             <div class="hjc_news">
                                 <div class="hjc_news_subject">@newse.FullHead</div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@newse.ReleaseTimeStr</span>
                                     <span>@newse.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -366,7 +366,7 @@
                             <div class="hjc_news_left">
                                 <div class="hjc_news_subject">@newse.FullHead</div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@newse.ReleaseTimeStr</span>
                                     <span>@newse.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -396,7 +396,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@newse.ReleaseTimeStr</span>
                                     <span>@newse.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -418,7 +418,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="newstime">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@newse.ReleaseTimeStr</span>
                                     <span>@newse.CommentCount<i class="icon-comment"></i></span>
                                 </div>
@@ -431,7 +431,7 @@
                             <div class="hjc_news">
                                 <div class="hjc_news_subject">@newse.FullHead</div>
                                 <div class="">
-                                    <span>万彩吧</span>
+                                    <span>@site.WebName</span>
                                     <span>@newse.ReleaseTimeStr</span>
                                     <span>@newse.CommentCount<i class="icon-comment"></i></span>
                                 </div>
