--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -96,14 +96,14 @@
             <div style="clear:both;"></div>
         </ul>
 
-      
+
     </div>
     <div class="hjc_CZQieBox">
         <div class="hdNav_cai_collect" style="display: block;">
             <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
-            {
+                {
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
                 <div style="clear:both;"></div>
@@ -113,7 +113,7 @@
 
             <ul class="hdNav_cai">
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
-            {
+                {
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
                 <div style="clear:both;"></div>
@@ -124,7 +124,7 @@
 
 
 
-    <div class="hjc_indexmain" >
+    <div class="hjc_indexmain">
         @foreach (LotteryType2 lotteryType in ViewBag.list)
         {
             int[] lTypeArr = lotteryType.SonIdArr;
@@ -158,6 +158,10 @@
                                         @if (record.ShowOpenTime == "正在开奖")
                                         {
                                             <span>正在开奖</span>
+                                        }
+                                        else if (record.ShowOpenTime == "休奖时间")
+                                        {
+                                            <span>休奖时间</span>
                                         }
                                         else
                                         {
