--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -69,34 +69,39 @@
                 }
                 if(item.RestrictedAreas==null ||item.RestrictedAreas=="" || idx==-1)
                 {
-                    if(item.Layer==1)
+                    if(!IsPC())
                     {
-                        $(".article").prepend(itemhtml(item))
-                    }else if(item.Layer==2)
-                    {
-                        $(".article-tag").after(itemhtml(item))
-                    }else if(item.Layer==3)
-                    {
-                        $(".article-body").after(itemhtml(item))
-                    }
-                    else if(item.Layer==4)
-                    {
-                        $(".article-share").after(itemhtml(item))
-                    }
-                    else if(item.Layer==5)
-                    {
-                        $(".article-pager").after(itemhtml(item))
-                    }
-                    else if(item.Layer==6)
-                    {
-                        $(".hjc_news_lhs").after(itemhtml(item))
-                        $(".GG_Box").addClass("GG_Box1")
+                        if(item.Layer==1)
+                        {
+                            $(".article").prepend(itemhtml(item))
+                        }else if(item.Layer==2)
+                        {
+                            $(".article-tag").after(itemhtml(item))
+                        }else if(item.Layer==3)
+                        {
+                            $(".article-body").after(itemhtml(item))
+                        }
+                        else if(item.Layer==4)
+                        {
+                            $(".article-share").after(itemhtml(item))
+                        }
+                        else if(item.Layer==5)
+                        {
+                            $(".article-pager").after(itemhtml(item))
+                        }
+                        else if(item.Layer==6)
+                        {
+                            $(".hjc_news_lhs").after(itemhtml(item))
+                            $(".GG_Box").addClass("GG_Box1")
 
-                    } else if(item.Layer==7)
-                    {
-                        $(".raking").after(itemhtml(item))
-                        $(".GG_Box").addClass("GG_Box1")
+                        } else if(item.Layer==7)
+                        {
+                            $(".raking").after(itemhtml(item))
+                            $(".GG_Box").addClass("GG_Box1")
+                        }
                     }
+                   
+
                 }
             });
         }
