--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -55,6 +55,7 @@
                 $(document).dialog({
                     type: 'confirm',
                     closeBtnShow: true,
+                    style:"ios",
                     content: '确定不再关注此人?',
                     onClickConfirmBtn: function () {
                         $.post('/Personal/UnFollow', { followed_userId: follow_uid }, function (data) {
