--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -207,7 +207,7 @@
 
                     @if (lType == 5)
                     {
-                        string[] shengxiaoArr = Util.ChangeOpenNumToShengxiao(record.Num).Split(',');
+                        string[] shengxiaoArr = Util.ChangeOpenNumToShengxiao(record.Num,record.SubTime).Split(',');
                         int count8 = 0;
 
 
