--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -1,11 +1,15 @@
 ﻿@using C8.Lottery.Public
 @using C8.Lottery.Model
+
 @{
     Layout = null;
     Dictionary<string, string> queryDate = ViewBag.queryDate as Dictionary<string, string>;
 
     string desc = @ViewBag.date + "开奖记录";
     int lType = ViewBag.lType;
+    string currentDate = ViewBag.currentDate;
+  
+    
 }
 <!DOCTYPE html>
 
@@ -15,17 +19,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>开奖记录-@ViewBag.lotteryTypeName</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link href="~/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="/js/function.js"></script>
     <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="~/Mdate/iScroll.js"></script>
+    <script type="text/javascript" src="~/Mdate/Mdate.js"></script>
+
 </head>
 <body style="background: #F4F4F5;">
     <header class="hjc_header">
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">开奖记录</a>
+        <div class="demo">
+            @*<input type="text" value="@currentDate" id="dateSelectorOne" placeholder="">*@
+            <p id="dateSelectorOne" >@currentDate</p>
+        </div>
         @*@if (lType >= 9)
         {*@
-        @{
+        @*@{
             string style = "";
             if (lType < 9)
             {
@@ -33,8 +45,8 @@
             }
 
 
-         }
-            <div class="Plan_QiHaoTwo">
+         }*@
+            @*<div class="Plan_QiHaoTwo">
                 <select class="QHT_Set" id="queryDate" style="@style">
 
                     @{
@@ -52,7 +64,7 @@
                     }
 
                 </select>
-            </div>
+            </div>*@
         @*}*@
     </header>
 
@@ -62,177 +74,199 @@
     </div>
 
     <div class="KJ_text">
-        @foreach (LotteryRecord record in ViewBag.list)
-        {
-            string[] numArr = record.Num.Split(',');
-
-            <dl class="KJ_Tinfo">
-                @if (lType == 10 || lType == 63 || lType == 65)
+        @{
+            if (ViewBag.list.Count >0)
+            {
+                foreach (LotteryRecord record in ViewBag.list)
                 {
-                    <dt>@ViewBag.date @record.SubTime.ToString("HH:mm") @record.ShowIssue</dt>
-                }
-                else if (lType < 9)
-                {
-                    <dt>@record.SubTime.ToString("f") @record.ShowIssue</dt>
-                }
-                else
-                {
-                    <dt>@ViewBag.date @record.SubTime.ToString("HH:mm") @record.ShowIssue</dt>
-                }
-                <dd>
-                    <div class="KJ_TH">
-                        @if (lType == 63 || lType == 64)
+                    string[] numArr = record.Num.Split(',');
+
+                    <dl class="KJ_Tinfo">
+                        @if (lType == 10 || lType == 63 || lType == 65)
                         {
-                            foreach (string s in numArr)
-                            {
-                                string clazz = "TH_sp TH_spPK TH_spPK" + s;
-                                <span class="@clazz">@s</span>
-                            }
+                            <dt>@ViewBag.date @record.SubTime.ToString("HH:mm") @record.ShowIssue</dt>
                         }
-                        else if (lType == 5)
+                        else if (lType < 9)
                         {
-                            int count6 = 0;
-
-                            foreach (string s in numArr)
-                            {
-                                count6++;
-
-                                string color = Util.GetColor(s);
-                                string cl = "";
-                                if (color == "red")
-                                {
-                                    cl = "TH_sp TH_spred";
-                                }
-                                else if (color == "green")
-                                {
-                                    cl = "TH_sp TH_spgreen";
-                                }
-                                else
-                                {
-                                    cl = "TH_sp TH_spblue";
-                                }
-
-                                <span class="@cl">@s</span>
-
-                                if (count6 == 6)
-                                {
-                                    <span class="TH_sp TH_spjia">+</span>
-                                }
-
-                            }
-
-                        }
-                        else if (lType == 2)
-                        {
-                            int x = -1;
-                            foreach (string s in numArr)
-                            {
-                                x++;
-
-
-                                if (x == 6)
-                                {
-                                    <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
-                                }
-                                else
-                                {
-                                    <span class="TH_sp TH_spHong  HYJP_Red">@s</span>
-                                }
-
-                            }
-                        }
-                        else if (lType == 4)
-                        {
-                            int x1 = -1;
-                            foreach (string s in numArr)
-                            {
-                                x1++;
-
-
-                                if (x1 == 5 || x1 == 6)
-                                {
-                                    <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
-                                }
-                                else
-                                {
-                                    <span class="TH_sp TH_spHong HYJP_Red">@s</span>
-                                }
-
-                            }
-
-                        }
-                        else if (lType == 8)
-                        {
-                            int x2 = -1;
-                            foreach (string s in numArr)
-                            {
-                                x2++;
-
-
-                                if (x2 == 7)
-                                {
-                                    <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
-                                }
-                                else
-                                {
-                                    <span class="TH_sp TH_spHong HYJP_Red">@s</span>
-                                }
-                            }
-
-                        }
-                        else if (lType == 65)
-                        {
-                            int a = int.Parse(numArr[0]);
-                            int b = int.Parse(numArr[1]);
-                            int c = int.Parse(numArr[2]);
-                            int sum = a + b + c;
-
-                            <span class="TH_sp TH_spHong HYJP_Red">@numArr[0]</span>
-                            <span class="TH_sp TH_spHong HYJP_PcHao">+</span>
-                            <span class="TH_sp TH_spHong HYJP_Red">@numArr[1]</span>
-                            <span class="TH_sp TH_spHong HYJP_PcHao">+</span>
-                            <span class="TH_sp TH_spHong HYJP_Red">@numArr[2]</span>
-                            <span class="TH_sp TH_spHong HYJP_PcHao">=</span>
-                            <span class="TH_sp TH_spHong HYJP_Red">@sum</span>
+                            <dt>@record.SubTime.ToString("f") @record.ShowIssue</dt>
                         }
                         else
                         {
-                            foreach (string s in numArr)
-                            {
-                                <span class="TH_sp TH_spHong">@s</span>
-                            }
+                            <dt>@ViewBag.date @record.SubTime.ToString("HH:mm") @record.ShowIssue</dt>
                         }
-
-                    </div>
-
-                    @if (lType == 5)
-                    {
-                        string[] shengxiaoArr = Util.ChangeOpenNumToShengxiao(record.Num,record.SubTime).Split(',');
-                        int count8 = 0;
-
-
-                        <div class="KJ_TH">
-                            @foreach (string s in shengxiaoArr)
-                            {
-                                count8++;
-
-                                <span class="TH_sp">@s</span>
-
-                                if (count8 == 6)
+                        <dd>
+                            <div class="KJ_TH">
+                                @if (lType == 63 || lType == 64)
                                 {
-                                    <span class="TH_sp TH_spjia">+</span>
+                                    foreach (string s in numArr)
+                                    {
+                                        string clazz = "TH_sp TH_spPK TH_spPK" + s;
+                                        <span class="@clazz">@s</span>
+                                    }
                                 }
+                                else if (lType == 5)
+                                {
+                                    int count6 = 0;
+
+                                    foreach (string s in numArr)
+                                    {
+                                        count6++;
+
+                                        string color = Util.GetColor(s);
+                                        string cl = "";
+                                        if (color == "red")
+                                        {
+                                            cl = "TH_sp TH_spred";
+                                        }
+                                        else if (color == "green")
+                                        {
+                                            cl = "TH_sp TH_spgreen";
+                                        }
+                                        else
+                                        {
+                                            cl = "TH_sp TH_spblue";
+                                        }
+
+                                        <span class="@cl">@s</span>
+
+                                        if (count6 == 6)
+                                        {
+                                            <span class="TH_sp TH_spjia">+</span>
+                                        }
+
+                                    }
+
+                                }
+                                else if (lType == 2)
+                                {
+                                    int x = -1;
+                                    foreach (string s in numArr)
+                                    {
+                                        x++;
+
+
+                                        if (x == 6)
+                                        {
+                                            <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="TH_sp TH_spHong  HYJP_Red">@s</span>
+                                        }
+
+                                    }
+                                }
+                                else if (lType == 4)
+                                {
+                                    int x1 = -1;
+                                    foreach (string s in numArr)
+                                    {
+                                        x1++;
+
+
+                                        if (x1 == 5 || x1 == 6)
+                                        {
+                                            <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="TH_sp TH_spHong HYJP_Red">@s</span>
+                                        }
+
+                                    }
+
+                                }
+                                else if (lType == 8)
+                                {
+                                    int x2 = -1;
+                                    foreach (string s in numArr)
+                                    {
+                                        x2++;
+
+
+                                        if (x2 == 7)
+                                        {
+                                            <span class="TH_sp TH_spHong HYJP_Blue">@s</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="TH_sp TH_spHong HYJP_Red">@s</span>
+                                        }
+                                    }
+
+                                }
+                                else if (lType == 65)
+                                {
+                                    int a = int.Parse(numArr[0]);
+                                    int b = int.Parse(numArr[1]);
+                                    int c = int.Parse(numArr[2]);
+                                    int sum = a + b + c;
+
+                                    <span class="TH_sp TH_spHong HYJP_Red">@numArr[0]</span>
+                                    <span class="TH_sp TH_spHong HYJP_PcHao">+</span>
+                                    <span class="TH_sp TH_spHong HYJP_Red">@numArr[1]</span>
+                                    <span class="TH_sp TH_spHong HYJP_PcHao">+</span>
+                                    <span class="TH_sp TH_spHong HYJP_Red">@numArr[2]</span>
+                                    <span class="TH_sp TH_spHong HYJP_PcHao">=</span>
+                                    <span class="TH_sp TH_spHong HYJP_Red">@sum</span>
+                                }
+                                else
+                                {
+                                    foreach (string s in numArr)
+                                    {
+                                        <span class="TH_sp TH_spHong">@s</span>
+                                    }
+                                }
+                            </div>
+                            @if (lType == 5)
+                            {
+                                string[] shengxiaoArr = Util.ChangeOpenNumToShengxiao(record.Num, record.SubTime).Split(',');
+                                int count8 = 0;
+
+
+                                <div class="KJ_TH">
+                                    @foreach (string s in shengxiaoArr)
+                                    {
+                                        count8++;
+
+                                        <span class="TH_sp">@s</span>
+
+                                        if (count8 == 6)
+                                        {
+                                            <span class="TH_sp TH_spjia">+</span>
+                                        }
+                                    }
+                                </div>
+
                             }
-                        </div>
+                        </dd>
+                    </dl>
+                }
+            }
+            else
+            {
+                <div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无相关记录~</p></div>
+            }
 
-                    }
-
-                </dd>
-            </dl>
         }
+       
     </div>
 
-   
+
+    <script type="text/javascript">
+new Mdate("dateSelectorOne");
+
+new Mdate("dateShowBtn", {
+    acceptId: "dateSelectorTwo",
+    beginYear: "2002",
+    beginMonth: "10",
+    beginDay: "24",
+    endYear: "2017",
+    endMonth: "1",
+    endDay: "1",
+    format: "-"
+})
+    </script>
 
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
