--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -255,20 +255,20 @@
 
 
     <script type="text/javascript">
-new Mdate("dateSelectorOne");
 
-//new Mdate("dateShowBtn", 
-//    {
-//    acceptId: "dateSelectorOne",
-//    beginYear: "2002",
-//    beginMonth: "10",
-//    beginDay: "24",
-//    endYear: "2017",
-//    endMonth: "1",
-//    endDay: "1",
-//    format: "-"
+
+new Mdate("dateSelectorOne",
+    {
+    acceptId: "dateSelectorOne",
+    beginYear: "2015",
+    beginMonth: "1",
+    beginDay: "1",
+    endYear: "",
+    endMonth: "",
+    endDay: "",
+    format: "-"
   
-//})
+})
     </script>
 </body>
 
